# molde_maestro

./: .gitignore  LICENSE  README.md  molde_maestro.yml  pipeline.py  pyproject.toml
.github/workflows/: ci.yml
src/molde_maestro/: cli.py  command_config.py  git_ops.py  models.py  pipeline.py  reporting.py  terminal_ui.py  utils.py  validation.py
src/molde_maestro/commands/: __init__.py  apply.py  plan.py  report.py  run.py  snapshot.py  test.py
tests/: test_pipeline.py  test_repo_hygiene.py
