[project]
name = "molde-maestro"
version = "0.1.0"
description = "Pipeline reproducible para planear (razonador), aplicar (Aider), testear y reportar mejoras sobre repos Git."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[project.scripts]
molde-maestro = "molde_maestro.pipeline:main"

[tool.uv]
package = true