[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molde-maestro"
version = "0.1.0"
description = "Pipeline reproducible para planear (razonador), aplicar (Aider), testear y reportar mejoras sobre repos Git."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.11",
]

[project.scripts]
molde-maestro = "molde_maestro.cli:main"

[tool.uv]
package = true
